# DiaMoE-TTS

./: README.md  app_gradio.py
dialect_frontend/: README.md  fix_erhua.py  gen_ppinyin_oop.py  hanzi2dialect_pinyin.py  ipa_tone.py  liandu_tone.py  pinyin2ipa.py  single_frontend.sh  word2dialect_pinyin.py
dialect_frontend/frontend/: __init__.py  dialect_frontend.py  en_frontend.py  generate_lexicon.py  henan_frontend.py  vocab.py  (+9 more)
diamoe_tts/: README.md  default_config.yaml  pyproject.toml  requirements.txt
diamoe_tts/data/: punctuation.txt  vocab.txt
diamoe_tts/src/f5_tts/configs/: diamoetts.yaml  diamoetts_peft.yaml
diamoe_tts/src/f5_tts/infer/: batch_infer.py  batch_infer.sh  utils_infer.py
diamoe_tts/src/f5_tts/infer/example/: basic.toml
diamoe_tts/src/f5_tts/model/: __init__.py  cfm.py  dataset.py  modules.py  moe.py  trainer.py  utils.py
diamoe_tts/src/f5_tts/model/backbones/: dit.py  ditpeft.py
diamoe_tts/src/f5_tts/train/: train.py
diamoe_tts/src/f5_tts/train/datasets/: prepare_ipa.py
docs/: ipa_frontend_CN.md  ipa_frontend_EN.md  speech_annotation_scheme.xlsx
prompts/: cantonese_female_prompt.txt  cantonese_male_prompt.txt  chengdu_female_prompt.txt  chengdu_male_prompt.txt  hokkien_female_prompt.txt  hokkien_male_prompt.txt  nanjing_female_prompt.txt  nanjing_male_prompt.txt  shanghai_female_prompt.txt  shanghai_male_prompt.txt  shijiazhuang_female_prompt.txt  shijiazhuang_male_prompt.txt  tianjin_female_prompt.txt  tianjin_male_prompt.txt  xian_female_prompt.txt  xian_male_prompt.txt  zhengzhou_female_prompt.txt  zhengzhou_male_prompt.txt
(+68 files in other folders)
